<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sandhya.prabhu.in.ndbakingapp.activities.MainActivity">

   <include layout="@layout/toolbar"/>

    <include layout="@layout/content_main"/>

</android.support.design.widget.CoordinatorLayout>
