<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="sandhya.prabhu.in.ndbakingapp.fragments.RecipeFragment"
    tools:layout="@layout/recipe_frag"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
