<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/toolbar_textsize"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/ing_row"
        app:layoutManager="LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginBottom="@dimen/layout_margin"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_steps"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/toolbar_textsize"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"
        android:layout_marginTop="@dimen/layout_margin"
        tools:listitem="@layout/recipe_list_content"/>

</LinearLayout>