<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exp_player_height"
        android:visibility="gone">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/simpleExoPlayerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/thumbnailView"
            android:layout_width="@dimen/novideo_image_width"
            android:layout_height="@dimen/novideo_image_height"
            android:layout_gravity="center"
            android:visibility="gone"
            android:contentDescription="@string/thumbnailview" />
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_desc_height"
        android:layout_marginTop="@dimen/layout_margin"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="@dimen/layout_margin2">

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/step_desc_height"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/prev_image"
            app:srcCompat="@drawable/ic_prev" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/next_image"
            app:srcCompat="@drawable/ic_next" />

    </RelativeLayout>

</LinearLayout>