...
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_radius"
        android:orientation="vertical"
        tools:context="sandhya.prabhu.in.newstime.activities.CountrySelectionActivity">
...
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:layout_margin="@dimen/card_radius"
                android:background="@color/green"
                android:entries="@array/countries" />

...
