<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sandhya.prabhu.in.newstime.fragments.ArticlesFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/articleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
