...
        app:layout_constraintTop_toBottomOf="@+id/globeImage"
        app:layout_constraintVertical_bias="0.177">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
